--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
       </form>
     </div>
   </div>
+
+  <section>
+    <h1>projects links</h1>
+    <a href="https://ankqxprt01.github.io/dinesh-man-ashu-project/">Toy Shop</a>
+  </section>
 </nav>
 
 
